--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,20 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.mainContainer {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  width: 320px;
+  border: 5px solid black;
+  padding: 1em;
+  margin: 1em;
+}
+
+.display {
+  font-size: 35px;
+}
 .calculatorContainer {
   display: flex;
   flex-flow: row wrap;
@@ -17,7 +31,12 @@
   width: 50px;
 }
 
-.op {
+.btn.op,
+.btn.equal {
   color: rgb(200, 45, 45);
   border: 1px solid rgb(200, 45, 45);
+}
+
+.btn.equal {
+  width: 224px;
 }
