Update buttons to display their value when clicked
This update added some functionality to the buttons,
such as that when they are clicked they will display
their values above the numpad of the calculator.

Additionally, the operator buttons "+-/*" now update
the variables "firstNumber" and "operator".

--- a/styles.css
+++ b/styles.css
@@ -26,17 +26,26 @@
   width: 250px;
   margin: 25px;
 }
-.btn {
+.btn,
+.addBtn,
+.subtractBtn,
+.multiplyBtn,
+.divideBtn,
+.equalBtn,
+.clear {
   padding: 1em;
   width: 50px;
 }
 
-.btn.op,
-.btn.equal {
+.addBtn,
+.subtractBtn,
+.multiplyBtn,
+.divideBtn,
+.equalBtn {
   color: rgb(200, 45, 45);
   border: 1px solid rgb(200, 45, 45);
 }
 
-.btn.equal {
+.equalBtn {
   width: 224px;
 }
