Fix the issue that prevented more than 1 operation
This update fixed the previous commit's issue. The
calculator is now able to handle multiple operations
while maintaining context from previous operations.

Although, there still remains a minor issue where
the user has to click on the equal button after each
operation, so, for example, 2 + 2 + 2 wouldn't work,
the user would have to click "2 + 2 =" and then continue
normally.

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 .mainContainer {
   display: flex;
   flex-flow: column wrap;
-  justify-content: center;
   align-items: center;
   width: 320px;
   border: 5px solid black;
@@ -17,7 +16,11 @@
 }
 
 .display {
-  font-size: 35px;
+  font-size: 140%;
+  border: 1px solid black;
+  width: 200px;
+  height: 80px;
+  padding: 5px;
 }
 .calculatorContainer {
   display: flex;
