--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,25 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+h3 {
+  margin: 5px;
+}
+
 .mainContainer {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column;
   align-items: center;
   width: 320px;
   border: 5px solid black;
-  padding: 1em;
   margin: 1em;
+  padding: 1em;
 }
 
 .display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   font-size: 140%;
   border: 1px solid black;
   width: 200px;
@@ -24,32 +32,66 @@
 }
 .calculatorContainer {
   display: flex;
+  justify-content: center;
   flex-flow: row wrap;
-  gap: 0.5em;
+  gap: 5px;
   width: 250px;
   margin: 25px;
 }
+
+.equalBtn {
+  width: 216px;
+  outline: 0;
+  cursor: pointer;
+  border: 2px solid #000;
+  border-radius: 3px;
+  color: #fff;
+  background: #000;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 5px 5px;
+  transition-duration: .15s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+}
+
 .btn,
 .dotBtn,
+.clear,
 .addBtn,
 .subtractBtn,
 .multiplyBtn,
-.divideBtn,
-.equalBtn,
-.clear {
-  padding: 1em;
+.divideBtn {
   width: 50px;
+  outline: 0;
+  cursor: pointer;
+  border: 2px solid #000;
+  border-radius: 3px;
+  color: #fff;
+  background: #000;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 5px 5px;
+  transition-duration: .15s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+}
+.btn:hover,
+.dotBtn:hover {
+  color: #000;
+  background: rgb(255, 218, 87);
 }
 
-.addBtn,
-.subtractBtn,
-.multiplyBtn,
-.divideBtn,
-.equalBtn {
-  color: rgb(200, 45, 45);
-  border: 1px solid rgb(200, 45, 45);
+.clear:hover,
+.subtractBtn:hover,
+.divideBtn:hover {
+  color: #000;
+  background: rgb(235, 8, 8);
 }
 
-.equalBtn {
-  width: 224px;
+.equalBtn:hover,
+.addBtn:hover,
+.multiplyBtn:hover {
+  color: #000;
+  background: rgb(8, 235, 27);
 }
