--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
   border: 1px solid black;
   padding: 5px;
 
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   color: white;
 
   font-size: 100%;
